fix(data-table): remove extra padding on toolbar-action elem

--- a/packages/components/src/components/data-table/_data-table-action.scss
+++ b/packages/components/src/components/data-table/_data-table-action.scss
@@ -201,7 +201,6 @@
     cursor: pointer;
     height: $layout-04;
     width: $layout-04;
-    padding: $spacing-md;
     transition: background $duration--fast-02 motion(entrance, productive);
   }
 
